force-app/main/default/objects/SPEN_SafetyForm__c/SPEN_SafetyForm__c.object-meta.xml
<CustomObject>
    <description>Object used to capture the safety forms</description>
    <label>Safety Form</label>
    <nameField>
        <displayFormat>SF-{0000}</displayFormat>
        <label>Safety Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Safety Form</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>