force-app/main/default/objects/SPEN_SafetyForm__c/fields/SPEN_ActionMatrix__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ActionMatrix__c</fullName>
    <description>Field used to store the result of the action matrix</description>
    <label>Action Matrix</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Action Low - Continue working and reassess in 2 hours.</fullName>
            </value>
            <value>
                <fullName>Action Medium - ﻿Pause to contact your Standby TL. You may be able to continue following discussion with your Standby TL and creating a risk mitigation action plan. Please reassess in 1 hour.</fullName>
            </value>
            <value>
                <fullName>Action High - Stop and contact Standby TL. Work should only continue if appropriate to do so with a risk mitigation action plan in place following discussion between Standby TL and Duty Manager. Please reassess in 1 hour.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>