force-app/main/default/objects/SPEN_SafetyForm__c/fields/SPEN_AddressPDF__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AddressPDF__c</fullName>
    <description>Field used to get Address with the correct format in the pdf</description>
    <formula>SPEN_Street__c  + &apos;, &apos; +   SPEN_City__c   + &apos;, &apos; +   SPEN_ZipPostalCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address PDF</label>
    <type>Text</type>
</CustomField>