force-app/main/default/objects/SPEN_SafetyForm__c/fields/SPEN_City__c.field-meta.xml
<CustomField>
    <fullName>SPEN_City__c</fullName>
    <description>Field used to store the city related to the form.</description>
    <label>City/town</label>
    <length>255</length>
    <type>Text</type>
</CustomField>