force-app/main/default/objects/SPEN_SafetyForm__c/fields/SPEN_ClientSignature__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ClientSignature__c</fullName>
    <description>Field used to capture the client signature
Used in GS6 forms</description>
    <label>Client Signature</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>