force-app/main/default/objects/SPEN_SafetyForm__c/fields/SPEN_ClientSignatureBase64__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ClientSignatureBase64__c</fullName>
    <description>Field used to store the base 64 file of the client signature</description>
    <label>Client Signature Base 64</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>