force-app/main/default/objects/SPEN_SafetyForm__c/fields/SPEN_CoordinateX__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CoordinateX__c</fullName>
    <description>Field used to capture the X coordinate of the field operative location. Used in GS6 form</description>
    <label>Coordinate X</label>
    <length>255</length>
    <type>Text</type>
</CustomField>