force-app/main/default/objects/SPEN_SafetyForm__c/fields/SPEN_CoordinateY__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CoordinateY__c</fullName>
    <description>Field used to capture the Y coordinate of the field operative. Used in the GS6 Form</description>
    <label>Coordinate Y</label>
    <length>255</length>
    <type>Text</type>
</CustomField>