force-app/main/default/objects/SPEN_SafetyForm__c/fields/SPEN_CustomerEmail__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CustomerEmail__c</fullName>
    <description>Field used to capture the customer email
Used in GS6 forms</description>
    <label>Email address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>