force-app/main/default/objects/SPEN_SafetyForm__c/fields/SPEN_FatigueRiskAssessmentScore__c.field-meta.xml
<CustomField>
    <fullName>SPEN_FatigueRiskAssessmentScore__c</fullName>
    <description>Field used to store the fatigue risk assessment score</description>
    <label>Fatigue Risk Assessment Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>