force-app/main/default/objects/SPEN_SafetyForm__c/fields/SPEN_FieldOperativeSignatureBase64__c.field-meta.xml
<CustomField>
    <fullName>SPEN_FieldOperativeSignatureBase64__c</fullName>
    <description>Field used to store the base 64 file of the field operative signature</description>
    <label>Field Operative Signature Base 64</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>