force-app/main/default/objects/SPEN_SafetyForm__c/fields/SPEN_Geolocation__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Geolocation__c</fullName>
    <description>Field used to store the latitude and longitude</description>
    <label>Geolocation</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>