force-app/main/default/objects/SPEN_SafetyForm__c/fields/SPEN_GeolocationPDF__c.field-meta.xml
<CustomField>
    <fullName>SPEN_GeolocationPDF__c</fullName>
    <description>Field used to get the coordinates X and Y in the correct format. Used in conga PDF template</description>
    <formula>&apos;X: &apos; + SPEN_CoordinateX__c  +&apos;, &apos; + &apos;Y: &apos; + SPEN_CoordinateY__c</formula>
    <label>Geolocation PDF</label>
    <type>Text</type>
</CustomField>