force-app/main/default/objects/SPEN_SafetyForm__c/fields/SPEN_HeightOfGoalPost__c.field-meta.xml
<CustomField>
    <fullName>SPEN_HeightOfGoalPost__c</fullName>
    <description>Field used to capture the height of the goal post
Used in GS6 forms</description>
    <label>Height of goal post (metres)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>