force-app/main/default/objects/SPEN_SafetyForm__c/fields/SPEN_HeightOfLowestConductor__c.field-meta.xml
<CustomField>
    <fullName>SPEN_HeightOfLowestConductor__c</fullName>
    <description>Field used to capture the height of the lowest conductor
Used in GS6 forms</description>
    <label>Height of lowest conductor (metres)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>