force-app/main/default/objects/SPEN_SafetyForm__c/fields/SPEN_HoursOfSleepLast24h__c.field-meta.xml
<CustomField>
    <fullName>SPEN_HoursOfSleepLast24h__c</fullName>
    <description>Field used to capture the number of hours the field operative slept in the last 24 hours</description>
    <label>How many hours of sleep in the last 24h?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>More than 7 hours</fullName>
            </value>
            <value>
                <fullName>Between 5-7 hours</fullName>
                <label>Between 5 - 7 hours</label>
            </value>
            <value>
                <fullName>Less than 5 hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>