force-app/main/default/objects/SPEN_SafetyForm__c/fields/SPEN_HoursOfSleepLast48h__c.field-meta.xml
<CustomField>
    <fullName>SPEN_HoursOfSleepLast48h__c</fullName>
    <description>Field used to capture the number of hours the field operative slept in the last 48 hours</description>
    <label>How many hours of sleep in the last 48h?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>14 or more</fullName>
                <label>More than 14 hours</label>
            </value>
            <value>
                <fullName>12-14</fullName>
                <label>Between 12 - 14 hours</label>
            </value>
            <value>
                <fullName>Less than 12</fullName>
                <label>Less than 12 hours</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>