force-app/main/default/objects/SPEN_SafetyForm__c/fields/SPEN_HowDoYouFeel__c.field-meta.xml
<CustomField>
    <fullName>SPEN_HowDoYouFeel__c</fullName>
    <description>Field used to capture the field operative exhaust state</description>
    <label>How do you feel?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active, alert or wide awake</fullName>
            </value>
            <value>
                <fullName>Functioning at a good level, able to concentrate but not at peak</fullName>
            </value>
            <value>
                <fullName>Tired and not fully alert</fullName>
            </value>
            <value>
                <fullName>Groggy and finding it difficult to concentrate</fullName>
            </value>
            <value>
                <fullName>Exhausted and in urgent need of rest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>