force-app/main/default/objects/SPEN_SafetyForm__c/fields/SPEN_HowLongIsYourCommute__c.field-meta.xml
<CustomField>
    <fullName>SPEN_HowLongIsYourCommute__c</fullName>
    <description>Field used to capture the number of hours of commute</description>
    <label>How long is your commute?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under 30 minutes</fullName>
            </value>
            <value>
                <fullName>Between 30 and 60 minutes</fullName>
            </value>
            <value>
                <fullName>Over an hour</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>