force-app/main/default/objects/SPEN_SafetyForm__c/fields/SPEN_HowManyPhases__c.field-meta.xml
<CustomField>
    <fullName>SPEN_HowManyPhases__c</fullName>
    <description>Field used to indicate the number of phases
Used in Cable head retention forms</description>
    <label>How many phases?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single phase</fullName>
            </value>
            <value>
                <fullName>Two phase</fullName>
            </value>
            <value>
                <fullName>Three phase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>