force-app/main/default/objects/SPEN_SafetyForm__c/fields/SPEN_JobNumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_JobNumber__c</fullName>
    <description>Field used to populate Job Number from Work Order Line Item if  GS6 form is launched from Work Step, otherwise can be populated manually.</description>
    <label>Job number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>