force-app/main/default/objects/SPEN_SafetyForm__c/fields/SPEN_LowCarbonTechnologyInstalled__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LowCarbonTechnologyInstalled__c</fullName>
    <description>Field used to indicate if Heat pump, EV charger or any other Low Carbon Technology has been installed at the property
Used in Cable Head Retention Tracker forms</description>
    <label>Low Carbon Technology installed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>