force-app/main/default/objects/SPEN_SafetyForm__c/fields/SPEN_NameOfContractorLandOwner__c.field-meta.xml
<CustomField>
    <fullName>SPEN_NameOfContractorLandOwner__c</fullName>
    <description>Field used to capture the name of the contractor or land owner
Used in GS6 forms</description>
    <label>Name of contractor/land owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>