force-app/main/default/objects/SPEN_SafetyForm__c/fields/SPEN_NeighbouringPropertiesChecked__c.field-meta.xml
<CustomField>
    <fullName>SPEN_NeighbouringPropertiesChecked__c</fullName>
    <description>Field used to indicate if the neighbouring properties have been checked if applicable
Used in Cable head retention forms</description>
    <label>Neighbouring properties checked</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>n/a</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>