force-app/main/default/objects/SPEN_SafetyForm__c/fields/SPEN_Observations__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Observations__c</fullName>
    <description>Field used to store the observations in the form</description>
    <label>Additional observations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>