force-app/main/default/objects/SPEN_SafetyForm__c/fields/SPEN_PolePylonNumber2__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PolePylonNumber2__c</fullName>
    <description>Field used to store the number of the second pole/pylon</description>
    <label>Pole/Pylon number 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>