force-app/main/default/objects/SPEN_SafetyForm__c/fields/SPEN_PolePylonNumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PolePylonNumber__c</fullName>
    <description>Field used to store the number of the first pole/pylon</description>
    <label>Pole/Pylon number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>