force-app/main/default/objects/SPEN_SafetyForm__c/fields/SPEN_PotentialHoursAtWork__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PotentialHoursAtWork__c</fullName>
    <description>Field used to store the number of potential hours at work</description>
    <label>Potential hours at work</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>