force-app/main/default/objects/SPEN_SafetyForm__c/fields/SPEN_RatingOfTheCableHead__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RatingOfTheCableHead__c</fullName>
    <description>Field used to indicate the rating of the cable head
Used in Cable head retention forms</description>
    <label>Rating of the cable head</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>25A</fullName>
            </value>
            <value>
                <fullName>60A</fullName>
            </value>
            <value>
                <fullName>80A</fullName>
            </value>
            <value>
                <fullName>100A</fullName>
            </value>
            <value>
                <fullName>200A</fullName>
            </value>
            <value>
                <fullName>300A (heavy duty)</fullName>
            </value>
            <value>
                <fullName>400A (heavy duty)</fullName>
            </value>
            <value>
                <fullName>600A (heavy duty)</fullName>
            </value>
            <value>
                <fullName>n/a</fullName>
                <isActive>false</isActive>
                <label>n/a</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>