force-app/main/default/objects/SPEN_SafetyForm__c/fields/SPEN_ReasonForVisit__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ReasonForVisit__c</fullName>
    <description>Field used to store the reason for the visit</description>
    <label>Reason for visit</label>
    <type>TextArea</type>
</CustomField>