force-app/main/default/objects/SPEN_SafetyForm__c/fields/SPEN_RecordTypeDevName__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RecordTypeDevName__c</fullName>
    <description>Field used to store the record type that should be assigned to the record (for offline)</description>
    <label>Record Type Dev Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>