force-app/main/default/objects/SPEN_SafetyForm__c/fields/SPEN_RetainedCutOutLocation__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RetainedCutOutLocation__c</fullName>
    <description>Field used to identify where the retained cut out is currently located
Used in Cable head retention forms</description>
    <label>Retained cut out location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kilmarnock</fullName>
            </value>
            <value>
                <fullName>Bonnybridge</fullName>
            </value>
            <value>
                <fullName>Glenrothes</fullName>
            </value>
            <value>
                <fullName>Edinburgh</fullName>
            </value>
            <value>
                <fullName>Galashiels</fullName>
            </value>
            <value>
                <fullName>Cambuslang</fullName>
            </value>
            <value>
                <fullName>Glasgow</fullName>
            </value>
            <value>
                <fullName>Dumfries</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>