force-app/main/default/objects/SPEN_SafetyForm__c/fields/SPEN_RetentionCutOutDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RetentionCutOutDate__c</fullName>
    <label>Retention cut out date</label>
    <type>Date</type>
</CustomField>