force-app/main/default/objects/SPEN_SafetyForm__c/fields/SPEN_SafetyClearance__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SafetyClearance__c</fullName>
    <description>Field used to capture the safety clearance 
Used in GS6 forms</description>
    <label>Safety clearance (metres)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>