force-app/main/default/objects/SPEN_SafetyForm__c/fields/SPEN_SelectAnyLCTsFoundAtThisAddress__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SelectAnyLCTsFoundAtThisAddress__c</fullName>
    <description>Field used to store the LCT found
Used in Cable head retention form</description>
    <label>Select Any LCTs Found At This Address</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solar panels</fullName>
            </value>
            <value>
                <fullName>Battery storage</fullName>
            </value>
            <value>
                <fullName>EV charger</fullName>
            </value>
            <value>
                <fullName>Heat pump</fullName>
            </value>
            <value>
                <fullName>Other (please specify on the next page)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>