force-app/main/default/objects/SPEN_SafetyForm__c/fields/SPEN_ServiceResource__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ServiceResource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field used to store the service resource related to the form</description>
    <label>Service Resource</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Risk Assessment Forms</relationshipLabel>
    <relationshipName>Risk_Assessment_Forms_80d</relationshipName>
    <type>Lookup</type>
</CustomField>