force-app/main/default/objects/SPEN_SafetyForm__c/fields/SPEN_Signature__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Signature__c</fullName>
    <description>Field used to capture the field operative signature
Used in GS6 forms</description>
    <label>Signature</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>