force-app/main/default/objects/SPEN_SafetyForm__c/fields/SPEN_SiteContact__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SiteContact__c</fullName>
    <description>Field used to capture the name of the site contact
Used in GS6 forms</description>
    <label>Site contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>