force-app/main/default/objects/SPEN_SafetyForm__c/fields/SPEN_SystemVoltage__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SystemVoltage__c</fullName>
    <description>Field used to capture the system voltage
Used in GS6 forms</description>
    <label>System voltage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low Voltage</fullName>
                <label>Low voltage</label>
            </value>
            <value>
                <fullName>11 kV</fullName>
            </value>
            <value>
                <fullName>33 kV</fullName>
            </value>
            <value>
                <fullName>66 kV</fullName>
            </value>
            <value>
                <fullName>132 kV</fullName>
            </value>
            <value>
                <fullName>275 kV</fullName>
            </value>
            <value>
                <fullName>400 kV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>