force-app/main/default/objects/SPEN_SafetyForm__c/fields/SPEN_TelephoneDetails__c.field-meta.xml
<CustomField>
    <fullName>SPEN_TelephoneDetails__c</fullName>
    <description>Field used to capture the phone number
Used in GS6 forms</description>
    <label>Telephone number</label>
    <type>Phone</type>
</CustomField>