force-app/main/default/objects/SPEN_SafetyForm__c/fields/SPEN_WhatTypeOfCutOutHasBeenRecovered__c.field-meta.xml
<CustomField>
    <fullName>SPEN_WhatTypeOfCutOutHasBeenRecovered__c</fullName>
    <description>Field used to indicate what type of cut out has been recovered
Used in Cable head retention forms</description>
    <label>What type of cut out has been recovered?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grey plastic</fullName>
            </value>
            <value>
                <fullName>Black plastic</fullName>
            </value>
            <value>
                <fullName>Metal clad</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>n/a</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>