force-app/main/default/objects/SPEN_SafetyForm__c/fields/SPEN_WillYouBeDrivingHomeAlone__c.field-meta.xml
<CustomField>
    <fullName>SPEN_WillYouBeDrivingHomeAlone__c</fullName>
    <description>Field used to indicate if the field operative will be driving home alone</description>
    <label>Will you be driving home alone?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SPEN_YesOrNo</valueSetName>
    </valueSet>
</CustomField>