force-app/main/default/objects/SPEN_SafetyForm__c/fields/SPEN_WorkEndDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_WorkEndDate__c</fullName>
    <description>Field used to capture the date and time when the field operative stopped working.</description>
    <label>Work end date</label>
    <type>DateTime</type>
</CustomField>