force-app/main/default/objects/SPEN_SafetyForm__c/fields/SPEN_WorkOrder__c.field-meta.xml
<CustomField>
    <fullName>SPEN_WorkOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field used to reference Work Order record.</description>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Safety Form</relationshipLabel>
    <relationshipName>Safety_Form</relationshipName>
    <type>Lookup</type>
</CustomField>