force-app/main/default/objects/SPEN_SafetyForm__c/fields/SPEN_WorkOrderLineItem__c.field-meta.xml
<CustomField>
    <fullName>SPEN_WorkOrderLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field used to store the work order line item related to the form</description>
    <label>Work Order Line Item</label>
    <referenceTo>WorkOrderLineItem</referenceTo>
    <relationshipLabel>Safety Forms</relationshipLabel>
    <relationshipName>Forms</relationshipName>
    <type>Lookup</type>
</CustomField>