force-app/main/default/objects/SPEN_SafetyForm__c/fields/SPEN_WorkStartDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_WorkStartDate__c</fullName>
    <description>Field to capture the date and time when the field operative started working</description>
    <label>Work start date</label>
    <type>DateTime</type>
</CustomField>