force-app/main/default/objects/SPEN_SafetyForm__c/fields/SPEN_ZipPostalCode__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ZipPostalCode__c</fullName>
    <description>Field Used to store the Postal Code related to the form.</description>
    <label>Postal code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>