force-app/main/default/objects/SPEN_SafetyForm__c/recordTypes/SPEN_CableHeadRetentionForm.recordType-meta.xml
<RecordType>
    <fullName>SPEN_CableHeadRetentionForm</fullName>
    <active>true</active>
    <description>Record type used to identify the Retention of damaged cut out form</description>
    <label>Retention of damaged cut out</label>
</RecordType>