force-app/main/default/objects/SPEN_SafetyForm__c/recordTypes/SPEN_FatigueManagementRiskAssessment.recordType-meta.xml
<RecordType>
    <fullName>SPEN_FatigueManagementRiskAssessment</fullName>
    <active>true</active>
    <description>Record Type used to identify the Fatigue Management Risk Assessment</description>
    <label>Fatigue Management Risk Assessment</label>
</RecordType>