force-app/main/default/objects/SPEN_SafetyForm__c/recordTypes/SPEN_GS6Form.recordType-meta.xml
<RecordType>
    <fullName>SPEN_GS6Form</fullName>
    <active>true</active>
    <description>Record type used to identify the GS6 forms</description>
    <label>GS6 Form</label>
</RecordType>