force-app/main/default/objects/SPEN_SafetyForm__c/listViews/Fatigue_Risk_Assessement.listView-meta.xml
<ListView>
    <fullName>Fatigue_Risk_Assessement</fullName>
    <columns>NAME</columns>
    <columns>SPEN_District__c</columns>
    <columns>SPEN_ServiceResource__c</columns>
    <columns>SPEN_PotentialHoursAtWork__c</columns>
    <columns>SPEN_FatigueRiskAssessmentScore__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>SPEN_SafetyForm__c.SPEN_FatigueManagementRiskAssessment</value>
    </filters>
    <label>Fatigue risk assessment</label>
</ListView>