force-app/main/default/objects/SPEN_SafetyForm__c/listViews/SPEN_CableHeadRetention.listView-meta.xml
<ListView>
    <fullName>SPEN_CableHeadRetention</fullName>
    <columns>NAME</columns>
    <columns>SPEN_District__c</columns>
    <columns>SPEN_RetentionCutOutDate__c</columns>
    <columns>SPEN_RatingOfTheCableHead__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>SPEN_SafetyForm__c.SPEN_CableHeadRetentionForm</value>
    </filters>
    <label>Retention of damaged cut out</label>
</ListView>