force-app/main/default/objects/SPEN_SafetyForm__c/listViews/SPEN_GS6.listView-meta.xml
<ListView>
    <fullName>SPEN_GS6</fullName>
    <columns>NAME</columns>
    <columns>SPEN_District__c</columns>
    <columns>SPEN_SystemVoltage__c</columns>
    <columns>SPEN_ReasonForVisit__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>SPEN_SafetyForm__c.SPEN_GS6Form</value>
    </filters>
    <label>GS6</label>
</ListView>